feedbacok from jie

--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -1,5 +1,5 @@
 ---
-title             : "Self-referencing Prioritizes Moral Character on Perceptual Matching"
+title             : "Self-referencing prioritizes moral character on perceptual matching"
 shorttitle        : "Self-referencing moral character"
 
 author: 
@@ -28,7 +28,7 @@ authornote: |
   Authors contriubtion: HCP, JS, & KP design the study, HCP collected the data, HCP analyzed the data and drafted the manuscript. All authors read and agreed upon the current version of the manuscripts.
 
 abstract: |
- Evidence for the prioritization of moral information in cognitive processes is mixed. We examined this question using a series of ten experiments where participants first learned associations between moral characters and geometric shapes and then performed simple speed tasks. In the first five experiments, we tested and validated a robust prioritization of good characters over bad and neutral characters. To pin down the processes that are critical to the prioritization effects, in the second round of five experiments, we tested two opposing hypotheses: the valence hypothesis suggests that a general positivity bias towards all underpins the prioritization effects, while the self-binding account posits that self-referencing, rather than other-referencing is the fundamental driver of the effects. The data support the latter. Together, these results show a robust prioritization effect of good character through self-referencing processes, indicating the innate connection between morality and oneself and how humans use self-reference to explore the world and learn morality.
+ Evidence for the prioritization of moral information in cognitive processes is mixed. We examined this question using a series of ten experiments where participants first learned associations between moral characters and geometric shapes and then performed simple speed tasks. In the first five experiments, we tested and validated prioritized responses to good characters over bad and neutral characters. To pin down the processes that are critical to the prioritization effects, in the remaining five experiments, we examined two opposing hypotheses: the valence hypothesis suggests that a general positivity bias towards all underpins the effects, while the self-binding account posits that self-referencing, rather than other-referencing is the fundamental driver of the effects. The data support the latter. Together, these results show a robust prioritization effect of good character through self-referencing processes, indicating the innate connection between morality and oneself and how humans use self-reference to explore the world and learn morality.
   
  <!-- https://tinyurl.com/ybremelq -->
   
@@ -100,11 +100,11 @@ Summary:
         our results
 -->
 
-Morality is central to human life [@haidt_morality_2010]. Thus, gathering information about morality efficiently and accurately is crucial for individuals to navigate the social world [@brambilla_primacy_2021]. The importance of morality naturally leads to the hypothesis that morality-related information is prioritized in information processing, especially when attentional resources are limited. This hypothesis is plausible because a large volume of studies has reported that valuable stimuli are prioritized, e.g., threatening stimuli [e.g., @ohman_face_2001], rewards [@anderson_value_2011], or self-related stimuli [@sui_self_attention_2019]. Consistent with this hypothesis, a few studies reported a prioritization effect of negative moral information in visual processing: negative moral trait words  [@fiske_1980; @ybarra_young_2001; @gantman_moral_2014] and faces associated with bad behaviors [@anderson_visual_2011; @eiserbeck_visual_2020] attracted more attention and were responded faster. 
+Morality is central to human life [@haidt_morality_2010]. Thus, gathering information about morality efficiently and accurately is crucial for individuals to navigate the social world [@brambilla_primacy_2021]. The importance of morality naturally leads to the hypothesis that morality-related information is prioritized in information processing, especially when attentional resources are limited. This hypothesis is plausible because a large volume of studies has reported that valuable stimuli are prioritized, e.g., threatening stimuli [e.g., @ohman_face_2001], rewards [@anderson_value_2011; @sui_more_2015], or self-related stimuli [@sui_self_attention_2019]. Consistent with this hypothesis, a few studies reported a prioritization effect of negative moral information in visual processing: negative moral trait words  [@fiske_attention_1980; @ybarra_young_2001; @gantman_moral_2014] and faces associated with bad behaviors [@anderson_visual_2011; @eiserbeck_visual_2020] attracted more attention and were responded faster. 
 
 However, evidence for this negative moral bias effect is mixed. First, the opposite effect was also reported. For example, @shore_social_2013 found that faces with positive interaction in a trust game were prioritized in the pre-attentive process. Also, Abele and Bruckmueller found faster responses to moral words were not moderated by valence [@abele_bigger_2011]. Second, the robustness of the negative moral bias effect is questioned, a direct replication study failed to support the conclusion that faces associated with bad social behaviors dominate visual awareness [eg., @stein_no_2017]. Third, the prioritization effect of morality might be confounded with other factors, such as the priming effect [@firestone_cognition_2015; @firestone_moral_2016; @jussim_interpretations_2016] or differences between lexical characteristics [Larsen et al., 2006]. As a result, while the importance of morality is widely recognized and there is initial evidence for a negative moral bias, whether moral information is prioritized in perceptual processing is still an open question. 
 
-Here, we conducted a series of well-controlled experiments to examine the prioritization effect of morality and its potential mechanisms. To eliminate the priming effect and other potential confounding factors, we employed a task where participants first acquired moral meanings of geometric shapes during the instruction phase and then performed a simple perceptual matching task. The instruction-based associative learning task is based on the fact that humans can rapidly learn based on verbal instructions [e.g., @cole_nbr_2017]. This instruction-based associative learning task is widely used in aversive learning, value-based learning, and other tasks [@atlas_ann_rev_2023; @deltomme_instructed_2018; cole_nbr_2017]. Unlike previous studies relies on faces or words, stimuli in the current study are geometric shapes, whose moral meanings were acquired right before the perceptual matching task. By counter-balancing associations between shapes and valence of moral characters across different participants, we controlled the effect of these shapes on the matching task. Also, in the matching task, we repeatedly present a few pairs of shapes and labels to participants, the results can not be explained by semantic priming [@unkelbach_chapter_2020], which is the center of the debate on previous results [@gantman_moral_2015; @gantman_see_2016; @firestone_cognition_2015; @Firestone_2016_BBS; @jussim_interpretations_2016]. Finally, we conducted a series of control experiments and established that moral content, rather than other factors such as familiarity of stimuli, drove the prioritization effects. 
+Here, we conducted a series of well-controlled experiments to examine the prioritization effect of morality and its potential mechanisms. To eliminate the priming effect and other potential confounding factors, we employed a task where participants first acquired moral meanings of geometric shapes during the instruction phase and then performed a simple perceptual matching task. The instruction-based associative learning task is based on the fact that humans can rapidly learn based on verbal instructions [e.g., @cole_nbr_2017]. This instruction-based associative learning task is widely used in aversive learning, value-based learning, and other tasks [@atlas_ann_rev_2023; @deltomme_instructed_2018; cole_nbr_2017]. Unlike previous studies relies on faces or words [e.g., @bortolon_self-face_2018, @yaoi_does_2021], stimuli in the current study are geometric shapes, whose moral meanings were acquired right before the perceptual matching task. By counter-balancing associations between shapes and valence of moral characters across different participants, we controlled the effect of these shapes on the matching task. Also, in the matching task, we repeatedly present a few pairs of shapes and labels to participants, the results can not be explained by semantic priming [@unkelbach_chapter_2020], which is the center of the debate on previous results [@gantman_moral_2015; @gantman_see_2016; @firestone_cognition_2015; @Firestone_2016_BBS; @jussim_interpretations_2016]. Finally, we conducted a series of control experiments and established that moral content, rather than other factors such as familiarity of stimuli, drove the prioritization effects. 
  
 To pin down the factors that are central to the prioritization effects, two competing hypotheses were examined. One is the valence-based account, suggesting that a general positivity bias towards all underpins the prioritization effects. In fact, the account has been applied to explain not only positivity biases but also negativity biases. For example, the negative bias toward moral information was explained by a threat detection mechanism which might be general for all negative information [@anderson_value_2011]. The positive bias toward moral information, on the other hand, was explained by the positive valence of the stimuli because the stimuli imply potential benefits [@shore_social_2013]. However, these explanations often ignore the fact that valence is subjective *per se* [@juechems_where_2019]. That is, being related to a person is the premise of a stimulus or outcome being of value to the person. The subjective value is “a broader concept that refers to the personal significance or importance that a person assigns to a particular stimulus or outcome” and when the outcome is affective or emotional, researchers refer to it as “valence”, i.e., positive or negative [@carruthers_valence_2021]. The subjectivity of valence leads to an alternative explanation: self-binding account [@sui_tics_2015]. The self-binding account suggests that merely associating with the self can prioritize stimuli in perception, attention, working memory, and long-term memory [@sui_self_attention_2019; @sui_tics_2015], especially for positive information [@Hu_2020_goodme]. According to the self-binding account, the prioritization of good character is a result of spontaneous self-referencing.
 
@@ -665,10 +665,9 @@ p_rt1 + p_dprime1 +
 #  ggsave('part1_plot_posterior.png', p, width = 15, height = 7.5)
 ```
 
-The results from reaction times also found a robust effect of moral character for both match trials (see figure \@ref(fig:plot-bayes-meta-1) C) and mismatch trials (**see supplementary materials**). For match trials, shapes associated with good characters were faster (median = `r med_rt_m_m1_good` ms, 95% HDI = [`r ll_rt_m_m1_good` `r ul_rt_m_m1_good`]) than shapes associated with neutral characters (median = `r med_rt_m_m1_neut` ms, 95% HDI = [`r ll_rt_m_m1_neut` `r ul_rt_m_m1_neut`]), the effect ($median_{diff}$ =  -44, 95% HDI  [-67, -24]) has a 99.94% probability of being negative (< 0), 99.94% of being significant (< -0.05). We also found that RTs to shapes associated with bad characters (median = `r med_rt_m_m1_bad` ms, 95% HDI = [`r ll_rt_m_m1_bad` `r ul_rt_m_m1_bad`]) were slower as compared to the neutral character, the effect ($median_{diff}$ = 17, 95% HDI  [-6, 36]) has a 93.58% probability of being positive (> 0), 93.55% of being significant (> 0.05).
+The results from reaction times also found a robust effect of moral character for both match trials (see figure \@ref(fig:plot-bayes-meta-1) C) and nonmatch trials (**see supplementary materials**). For match trials, shapes associated with good characters were faster (median = `r med_rt_m_m1_good` ms, 95% HDI = [`r ll_rt_m_m1_good` `r ul_rt_m_m1_good`]) than shapes associated with neutral characters (median = `r med_rt_m_m1_neut` ms, 95% HDI = [`r ll_rt_m_m1_neut` `r ul_rt_m_m1_neut`]), the effect ($median_{diff}$ =  -44, 95% HDI  [-67, -24]) has a 99.94% probability of being negative (< 0), 99.94% of being significant (< -0.05). We also found that RTs to shapes associated with bad characters (median = `r med_rt_m_m1_bad` ms, 95% HDI = [`r ll_rt_m_m1_bad` `r ul_rt_m_m1_bad`]) were slower as compared to the neutral character, the effect ($median_{diff}$ = 17, 95% HDI  [-6, 36]) has a 93.58% probability of being positive (> 0), 93.55% of being significant (> 0.05).
 
-For the mismatch trials, we found a similar pattern but a much smaller effect size. Shapes associated with good characters (median = `r med_rt_nm_m1_good` ms, 95% HDI = [`r ll_rt_nm_m1_good` `r ul_rt_nm_m1_good`]) were faster than shapes associated with neutral characters (median = `r med_rt_nm_m1_neut` ms, 95% HDI = [`r ll_rt_nm_m1_neut` `r ul_rt_nm_m1_neut`]), the difference ($median_{diff}$ = -18, 95% HDI  [-27, -8]) has a 99.91% probability of being negative (< 0), 99.91% of being significant (< -0.05). In contrast, the shapes associated with bad characters (median = `r med_rt_nm_m1_bad` ms, 95% HDI = [`r ll_rt_nm_m1_bad` `r ul_rt_nm_m1_bad`]) were slower than shapes associated with neutral characters, the effect ($median_{diff}$ = 5, 95% HDI  [-3, 13]) has a 92.43% probability of being positive (> 0), 92.31% of being significant (> 0.05).
-
+For the nonmatch trials, we found a similar pattern but a much smaller effect size. Shapes associated with good characters (median = `r med_rt_nm_m1_good` ms, 95% HDI = [`r ll_rt_nm_m1_good` `r ul_rt_nm_m1_good`]) were faster than shapes associated with neutral characters (median = `r med_rt_nm_m1_neut` ms, 95% HDI = [`r ll_rt_nm_m1_neut` `r ul_rt_nm_m1_neut`]), the difference ($median_{diff}$ = -18, 95% HDI  [-27, -8]) has a 99.91% probability of being negative (< 0), 99.91% of being significant (< -0.05). In contrast, the shapes associated with bad characters (median = `r med_rt_nm_m1_bad` ms, 95% HDI = [`r ll_rt_nm_m1_bad` `r ul_rt_nm_m1_bad`]) were slower than shapes associated with neutral characters, the effect ($median_{diff}$ = 5, 95% HDI  [-3, 13]) has a 92.43% probability of being positive (> 0), 92.31% of being significant (> 0.05).
 
 ## Modulation effect self-referential processing
 
@@ -1940,15 +1939,15 @@ p_exp4a_rt1 + exp4a_sdt_p + p_exp4b_rt1 + exp4b_sdt_p + p_exp4a_rt_diff_val + p_
 The same trend appeared for the RT data. For shapes associated with good character, having a "self" inside shapes reduced the reaction times as compared to having an "other" inside the shapes ($mean_{diff}$ = -55, 95% HDI [-75, -35]) has a 100% probability of being negative (< 0) and 100.00% of being significant (< -0.05). However, when the shapes were associated with the neutral character, having a "self" inside shapes increased the RTs: $mean_{diff}$ = 11, 95% HDI [1, 21]) has a 98.20% probability of being positive (> 0) and 98.15% of being significant (> 0.05). While having "self" slightly increased the RT than having "other" inside the shapes for the bad character: $mean_{diff}$ = 5, 95% HDI [-17, 27]) has a 69.45% probability of being positive (> 0) and 69.27% of being significant (> 0.05), See Figure \@ref(fig:plot-exp4-all).
 
 # Discussion
-Across ten well-controlled experiments, we tested the primacy of morality in perceptual matching tasks. First, we found a robust prioritization of good character in the shape-label matching task across five experiments. Second, across three experiments, we found that the prioritization of good character was not solely driven by moral valence, i.e., "good" vs "bad". Instead, this effect was modulated by self-relevance: prioritization only occurred when moral characters are self-referential. Finally, the prioritization of the combination of good character and self occurred, albeit weak, even when either the self- or character-related information was irrelevant to the experimental task (experiments 4a and 4b). In contrast, performance to the combination of good character and “other”, explicitly or implicitly, was worse than the combination of neutral character and “other”. Together, these results highlighted the importance of self-relevance in perceiving information related to moral characters, suggesting a self-binding process when making perceptual decision-making for moral characters. These results are in line with a growing literature on the social and relational nature of perception (@xiao_perceiving_2016; @freeman_chapter_2020; ＠hafri_perception_2021) and deepened our understanding of mechanisms of perceptual decision-making of moral information.
+In this study, we investigated the primacy of morality in cognitive processes through systematically manipulating the factors that are central to the information processing of morality. First, we found a robust prioritization of good character in response times and *d*’ scores for the shape-label matching tasks across experiments. Second, to pinpoint the underlying processes of the effect, the analyses revealed that a self-referencing process was the fundamental driver of these effects, consistent with the self-binding account; that is, when a stimulus refers to the self, activation of self-representation enhances the binding of external input with internal knowledge through which self-related information can be integrated and optimized. The valence account, on the other hand, which posits that the prioritization effect was derived from a general positivity bias towards all (self and others), was not supported by the findings. Importantly, the prioritization effects emerged regardless of whether the relationship between moral character and oneself was task relevant. Collectively, humans tend to attribute moral character to themselves rather than others, leading to prioritized responses to self perceived moral character in decision making. 
 
-The current study provided robust evidence for the prioritization of good character in perceptual decision-making. Though the primacy of morality has been argued in social psychology, whether morality is prioritized in information processing had been disputed. For instance, [@anderson_visual_2011] reported that faces associated with bad social behavior capture attention more rapidly, but an independent team failed to replicate the effect [@stein_no_2017]. In another study, @gantman_moral_2014 found that moral words are more likely to be judged as words when it was presented subliminally. But this effect may be caused by semantic priming instead of morality [@firestone_cognition_2015; @jussim_interpretations_2016]. In the current study, we employed an associative learning task, which allowed us to eliminate the semantic priming effect for two reasons. First, associations between shapes and moral characters were acquired right before the perceptual matching task, semantic priming from pre-existed knowledge was impossible. Second, there were only a few pairs of stimuli were used and each stimulus represented different conditions, making it impossible for priming between trials. Importantly, a series of control experiments (1b, 1c, and 2) further excluded other confounding factors such as familiarity, presenting sequence, or words-based associations, suggesting that it was the moral content that drove the prioritization of good character. 
+The current study provided robust evidence for the prioritization of good character in perceptual decision-making. Though the primacy of morality has been argued in social psychology, whether morality is prioritized in information processing has been disputed. For instance, [@anderson_visual_2011] reported that faces associated with bad social behavior capture attention more rapidly, but an independent team failed to replicate the effect [@stein_no_2017]. In another study, @gantman_moral_2014 found that moral words are more likely to be judged as words when it was presented subliminally. But this effect may be caused by semantic priming instead of morality [@firestone_cognition_2015; @jussim_interpretations_2016]. To overcome this issue, we employed a shape-label matching task to eliminate the semantic priming effect for two reasons. First, associations between shapes and moral characters were acquired during the instruction phase, semantic priming from pre-existed knowledge was impossible [@lee_pre-existing_2021]. Second, there were only a few pairs of stimuli that were used and each stimulus represented different conditions, making it impossible for priming between trials. Importantly, a series of control experiments (1b, 1c, and 2) excluded other confounding factors such as familiarity, presenting sequence, or words-based associations, suggesting that it was the moral content that drove the perceived prioritization of good character. These results are in line with a growing literature on the social and relational nature of perception (@xiao_perceiving_2016; @freeman_chapter_2020; ＠hafri_perception_2021).
 
-The robust prioritization of good character found in the current study was incongruent with previous moral perception studies, which usually reported a negativity bias, i.e., information related to bad character is processed preferentially [@anderson_visual_2011; @eiserbeck_visual_2020]. This discrepancy may be caused by the experimental task: while in many previous moral perception studies, the participants were asked to detect the existence of a stimulus, the current task asked participants to recognize a pattern. In other words, previous studies targeted early stages of perception while the current task focused more on decision-making at a relatively later stage of information processing. This discrepancy is consistent with the pattern found in studies with emotional stimuli [@pool_attentional_2016].
+The prioritization of good character found in the current study was incongruent with previous moral perception studies, which typically reported a negativity bias, i.e., information related to bad character is processed preferentially [@anderson_visual_2011; @eiserbeck_visual_2020]. This discrepancy may result from different task types employed: while in many moral perception studies, the participants were asked to detect the existence of a stimulus, the current task asked participants to judge the associations between a shape and a person. In other words, previous studies targeted the early stages of perception, while the current task focused more on perceptual decision-making, consistent with previous work [@sui_boundaries_2013]. This discrepancy is consistent with the positivity bias in studies with emotional stimuli [@pool_attentional_2016].
 
-We expanded previous moral perception studies by focusing on the agent who made the perceptual decision-making and examined the interaction between moral valence and self-relevance. Our results revealed that prioritization of good character is modulated by self-relevance: good character was prioritized when it was related to the “self”, even when the self-relatedness was task-irrelevant. By contrast, good character information was not prioritized when it was associated with “other”. The modulation effect of self-relevance was large when the relationship between moral character and the self was explicit, which is consistent with previous studies that only positive aspects of the self are prioritized [@Hu_2020_GoodSelf]. More importantly, the effect persisted when the relationship between moral character and self-information was implicit, suggesting a spontaneous self-binding process when both pieces of information were presented. A possible explanation for this spontaneous self-binding of good character is that the positive moral self-view is central to our identity [@freitas_origins_2017; @strohminger_true_2017] and the motivation to maintain a moral self-view influences how we perceive [e.g., @Ma_JEPHPP_2010] and remember [e.g., @carlson_nat_comm_2020;@stanley_remembering_2019]. 
+The current study expanded previous moral perception studies by testing a novel account that self-referencing processing is the critical driver of the effects. Our results revealed that prioritization of good character is modulated by self-relevance: good character was prioritized when it was referred to oneself. In contrast, good character information was not prioritized when it was referred to others. The modulation effect of self-relevance was amplified when the relationshipbetween moral character and oneself was explicit, consistent with previous studies that only positive aspects of the self are prioritized [@Hu_2020_goodme]. More importantly, the effect persisted even when the relationship between moral character and oneself was task-irrelevant, indicating  an implicit self-referencing process emerged from presenting good character and self-related information in the same display. A possible explanation for this spontaneous self-referencing of good character is that the positive moral self-view is central to our identity [@freitas_origins_2017; @strohminger_true_2017] and the motivation to maintain a moral self-view influences how we perceive [e.g., @Ma_JEPHPP_2010] and remember [e.g., @carlson_nat_comm_2020; @stanley_remembering_2019], with implications for the quality of life and wellbeing. 
 
-Although the results here revealed the prioritization of good character in perceptual decision-making, we did not claim that the motivation of a moral self-view *penetrates* perception. The perceptual decision-making process involves processes more than just encoding the sensory inputs. To fully account for the nuance of behavioral data and/or related data collected from other modules [e.g., @sui_electrophysiological_2023], we may need computational models and an integrative experimental approach [@Almaatouq_BBS_2022]. For example, sequential sampling models suggest that, when making a perceptual decision, the agent continuously accumulates evidence until the amount of evidence passed a threshold, then a decision is made [@ratcliff_tics_2016; @forstmann_ann_rev_2016; @Hu_hitchhikers_2022]. In these models, the evidence, or decision variable, can accumulate from both sensory information but also memory [@shadlen_decision_2016]. Recently, applications of sequential sample models to perceptual matching tasks also suggest that different processes may contribute to the prioritization effect of self [@golubickis_self-prioritization_2017] or good self [@Hu_2020_GoodSelf]. Similarly, reinforcement learning models also revealed that the key difference between self- and other-referential learning lies in the learning rate [@lockwood_neural_2018]. These studies suggest that computational models are needed to disentangle the cognitive processes underlying the prioritization of good character.
+Although the results here revealed the prioritization of good character in perceptual decision-making, we did not claim that the motivation of a moral self-view *penetrates* perception. The perceptual decision-making process involves processes more than just encoding the sensory inputs [@scheller_power_2022]. To fully account for the nuance of behavioral data and/or related data collected from other modules [e.g., @sui_electrophysiological_2023], we may need computational models and an integrative experimental approach [@Almaatouq_BBS_2022]. For example, sequential sampling models suggest that, when making a perceptual decision, the agent continuously accumulates evidence until the amount of evidence passes a threshold, and then a decision is made [@ratcliff_tics_2016; @forstmann_ann_rev_2016; @Hu_hitchhikers_2022]. In these models, the evidence, or decision variable, can accumulate from both sensory information but also memory [@shadlen_decision_2016]. Recently, applications of sequential sample models to perceptual matching tasks also suggest that different processes may contribute to the prioritization effect of self [@golubickis_self-prioritization_2017] or good self [@Hu_2020_goodme]. Similarly, reinforcement learning models revealed that the initial discrimination between self- and other-referencing learning lies in the learning rate [@lockwood_neural_2018]. These investigations suggest that computational models are required to disentangle the cognitive processes underlying the prioritization of good character.
 
 # References
 ```{r create_r-references, echo=FALSE,results='hide'}
