--- a/endnote.bib
+++ b/endnote.bib
@@ -1,3 +1,34 @@
+@article{Almaatouq_BBS_2022,
+	title = {Beyond {Playing} 20 {Questions} with {Nature}: {Integrative} {Experiment} {Design} in the {Social} and {Behavioral} {Sciences}},
+	issn = {0140-525X},
+	url = {https://doi.org/10.1017/S0140525X22002874},
+	doi = {10.1017/S0140525X22002874},
+	journal = {Behavioral and Brain Sciences},
+	author = {Almaatouq, Abdullah and Griffiths, Thomas L. and Suchow, Jordan W. and Whiting, Mark E. and Evans, James and Watts, Duncan J.},
+	year = {2022},
+	note = {Edition: 2022/12/21
+Publisher: Cambridge University Press},
+	keywords = {experiments, generalizability, /unread, (in)commensurability, cumulative knowledge},
+	pages = {1--55},
+}
+
+@article{bortolon_self-face_2018,
+	title = {Self-face advantage over familiar and unfamiliar faces: {A} three-level meta-analytic approach},
+	volume = {25},
+	issn = {1531-5320},
+	shorttitle = {Self-face advantage over familiar and unfamiliar faces},
+	url = {https://doi.org/10.3758/s13423-018-1487-9},
+	doi = {10.3758/s13423-018-1487-9},
+	language = {en},
+	number = {4},
+	urldate = {2021-03-20},
+	journal = {Psychonomic Bulletin \& Review},
+	author = {Bortolon, Catherine and Raffard, Stéphane},
+	month = aug,
+	year = {2018},
+	pages = {1287--1300},
+}
+
 @article{Simmons_2013_life,
    author = {Simmons, Joseph P and Nelson, Leif D. and Simonsohn, Uri },
    year = {2013},
@@ -33,6 +64,42 @@
    year = {2020},
 }
 
+
+@article{sui_boundaries_2013,
+	title = {The boundaries of self face perception: {Response} time distributions, perceptual categories, and decision weighting},
+	volume = {21},
+	issn = {1350-6285},
+	shorttitle = {The boundaries of self face perception},
+	url = {https://doi.org/10.1080/13506285.2013.800621},
+	doi = {10.1080/13506285.2013.800621},
+	number = {4},
+	urldate = {2023-06-29},
+	journal = {Visual Cognition},
+	author = {Sui, Jie and Humphreys, Glyn W.},
+	month = apr,
+	year = {2013},
+	keywords = {Face categorization, Reaction time distribution, Self-perception},
+	pages = {415--445},
+}
+
+
+@article{sui_more_2015,
+	title = {More of me! {Distinguishing} self and reward bias using redundancy gains},
+	volume = {77},
+	issn = {1943-393X},
+	url = {https://doi.org/10.3758/s13414-015-0970-x},
+	doi = {10.3758/s13414-015-0970-x},
+	language = {en},
+	number = {8},
+	urldate = {2023-06-29},
+	journal = {Attention, Perception, \& Psychophysics},
+	author = {Sui, Jie and Humphreys, Glyn W.},
+	month = nov,
+	year = {2015},
+	keywords = {Redundancy gain, Reward bias, Self bias},
+	pages = {2549--2561},
+}
+
 @article{sui_tics_2015,
 	title = {The {Integrative} {Self}: {How} {Self}-{Reference} {Integrates} {Perception} and {Memory}},
 	volume = {19},
@@ -65,6 +132,36 @@
 	month = oct,
 	year = {2019},
 	pages = {148--152},
+}
+
+@article{lee_pre-existing_2021,
+	title = {A pre-existing self-referential anchor is not necessary for self-prioritisation},
+	volume = {219},
+	issn = {0001-6918},
+	doi = {10.1016/j.actpsy.2021.103362},
+	language = {en},
+	urldate = {2021-07-18},
+	journal = {Acta Psychologica},
+	author = {Lee, Naomi A. and Martin, Douglas and Sui, Jie},
+	month = sep,
+	year = {2021},
+	keywords = {Self, Perceptual matching, Conjunction model, Integrative self, Self-prioritisation effect},
+	pages = {103362},
+}
+
+
+@article{scheller_power_2022,
+	title = {The power of the self: {Anchoring} information processing across contexts},
+	volume = {48},
+	issn = {1939-1277},
+	shorttitle = {The power of the self},
+	doi = {10.1037/xhp0001017},
+	number = {9},
+	journal = {Journal of Experimental Psychology: Human Perception and Performance},
+	author = {Scheller, Meike and Sui, Jie},
+	year = {2022},
+	keywords = {Decision Making, Classification (Cognitive Process), Connotations, Social Adjustment},
+	pages = {1001--1021},
 }
 
 @article{Love_etal_2019_JASP,
@@ -159,7 +256,7 @@ http://www.springerlink.com/content/210757612263v7h1/fulltext.pdf},
 	pages = {609--612},
 }
 
-@article{Hu_2020_GoodSelf,
+@article{Hu_2020_goodme,
    author = {Hu, Chuan-Peng and Lan, Yuxuan and Macrae, C. Neil and Sui, Jie},
    title = {Good Me Bad Me: Does Valence Influence Self-Prioritization During Perceptual Decision-Making?},
    journal = {Collabra: Psychology},
@@ -2053,23 +2150,6 @@ Publisher: American Psychological Association},
 	note = {\_eprint: https://doi.org/10.1146/annurev-neuro-101822-122427},
 }
 
-
-@article{almaatouq_BBS_2022,
-	title = {Beyond {Playing} 20 {Questions} with {Nature}: {Integrative} {Experiment} {Design} in the {Social} and {Behavioral} {Sciences}},
-	issn = {0140-525X},
-	url = {https://doi.org/10.1017/S0140525X22002874},
-	doi = {10.1017/S0140525X22002874},
-	journal = {Behavioral and Brain Sciences},
-	author = {Almaatouq, Abdullah and Griffiths, Thomas L. and Suchow, Jordan W. and Whiting, Mark E. and Evans, James and Watts, Duncan J.},
-	year = {2022},
-	note = {Edition: 2022/12/21
-Publisher: Cambridge University Press},
-	keywords = {experiments, generalizability, /unread, (in)commensurability, cumulative knowledge},
-	pages = {1--55},
-}
-
-
-
 @article{Ma_JEPHPP_2010,
 	title = {Why we respond faster to the self than to others? {An} implicit positive association theory of self-advantage during implicit face recognition},
 	volume = {36},
@@ -2251,3 +2331,18 @@ Publisher: Springer},
 	keywords = {Cognitive control, Neuroimaging, Functional connectivity, Automaticity, Executive functions, Network science, Instructed learning},
 	pages = {4--15},
 }
+
+
+@article{yaoi_does_2021,
+	title = {Does {Implicit} {Self}-{Reference} {Effect} {Occur} by the {Instantaneous} {Own}-{Name}?},
+	volume = {12},
+	issn = {1664-1078},
+	url = {https://www.frontiersin.org/article/10.3389/fpsyg.2021.709601},
+	doi = {10.3389/fpsyg.2021.709601},
+	urldate = {2021-11-27},
+	journal = {Frontiers in Psychology},
+	author = {Yaoi, Ken and Osaka, Mariko and Osaka, Naoyuki},
+	year = {2021},
+	pages = {4440},
+}
+
