--- a/general_method.rmd
+++ b/general_method.rmd
@@ -2,9 +2,9 @@
 ## Design and Procedure
 This series of experiments used the perceptual matching paradigm (or self-tagging paradigm, see @Sui_2012_JEPHPP), in which participants first learned the associations between geometric shapes and labels of different moral characters (e.g., in the first three studies, the triangle, square, and circle for shapes and Chinese words for “good person”, “neutral person”, and “bad person”, respectively). The associations of shapes and labels were counterbalanced across participants. The paradigm consists of a brief learning stage and a test stage. During the learning stage, participants were instructed about the association between shapes and labels. Participants started the test stage with a practice phase to familiarize themselves with the task, in which they viewed one of the shapes above the fixation while one of the labels below the fixation and judged whether the shape and the label matched the association they learned. If the overall accuracy reached 60% or higher at the end of the practicing session, participants proceeded to the experimental task of the test stage. Otherwise, they finished another practices sessions until the overall accuracy was equal to or greater than 60%.  The experimental task shared the same trial structure as in the practice. 
 
-Experiments 1a, 1b, 1c, 2, 5, and 6a were designed to explore and confirm the effect of moral character on perceptual matching. All these experiments shared a 2 (matching: match vs. nonmatch) by 3 (moral character: good vs. neutral vs. bad person) within-subject design. Experiment 1a was the first one of the whole series of studies, which aimed to examine the prioritization of moral character and found that shapes associated with good character were prioritized. Experiments 1b, 1c, and 2 were to confirm that it is the moral character that caused the effect. More specifically, experiment 1b used different Chinese words as labels to test whether the effect was contaminated by familiarity. Experiment 1c manipulated the moral character indirectly: participants first learned to associate different moral behaviors with different Chinese names, after remembering the association, they then associated the names with different shapes and finished the perceptual matching task. Experiment 2 further tested whether the way we presented the stimuli influenced the prioritization of moral character, by sequentially presenting labels and shapes instead of simultaneous presentation. Note that a few participants in Experiment 2 also participated in Experiment 1a because we originally planned a cross-task comparison. Experiment 5 was designed to compare the prioritization of good character with other important social values (aesthetics and emotion). All social values had three levels, positive, neutral, and negative, and were associated with different shapes. Participants finished the associative learning task for different social values in different blocks, and the order of the social values was counterbalanced. Only the data from moral character blocks, which shared the design of experiment 1a, were reported here. Experiment 6a, which shared the same design as Experiment 2, was an EEG experiment aimed at exploring the neural mechanism of the prioritization of good character. Only behavioral results of Experiment 6a were reported here.
+Experiments 1a, 1b, 1c, 2, 5, and 6a were designed to explore and confirm the effect of moral character on perceptual matching. All these experiments shared a 2 (matching: match vs. mismatch) by 3 (moral character: good vs. neutral vs. bad person) within-subject design. Experiment 1a was the first one of the whole series of studies, which aimed to examine the prioritization of moral character and found that shapes associated with good character were prioritized. Experiments 1b, 1c, and 2 were to confirm that it is the moral character that caused the effect. More specifically, experiment 1b used different Chinese words as labels to test whether the effect was contaminated by familiarity. Experiment 1c manipulated the moral character indirectly: participants first learned to associate different moral behaviors with different Chinese names, after remembering the association, they then associated the names with different shapes and finished the perceptual matching task. Experiment 2 further tested whether the way we presented the stimuli influenced the prioritization of moral character, by sequentially presenting labels and shapes instead of simultaneous presentation. Note that a few participants in Experiment 2 also participated in Experiment 1a because we originally planned a cross-task comparison. Experiment 5 was designed to compare the prioritization of good character with other important social values (aesthetics and emotion). All social values had three levels, positive, neutral, and negative, and were associated with different shapes. Participants finished the associative learning task for different social values in different blocks, and the order of the social values was counterbalanced. Only the data from moral character blocks, which shared the design of experiment 1a, were reported here. Experiment 6a, which shared the same design as Experiment 2, was an EEG experiment aimed at exploring the neural mechanism of the prioritization of good character. Only behavioral results of Experiment 6a were reported here.
 
-Experiments 3a, 3b, and 6b were designed to test whether the prioritization of good character can be explained by the valence account or by the self-binding account. For this purpose, we included self-reference as another within-subject variable. For example, Experiment 3a extended Experiment 1a into a 2 (matching: match vs. nonmatch) by 2 (reference: self vs. other) by 3 (moral character: good vs. neutral vs. bad) within-subject design. Thus, in Experiment 3a, there were six conditions (good-self, neutral-self, bad-self, good-other, neutral-other, and bad-other) and six shapes (triangle, square, circle, diamond, pentagon, and trapezoids). Experiment 6b was an EEG experiment based on Experiment 3a but presented the label and shape sequentially. Because of the relatively high working memory load (six label-shape pairs), participants finished Experiment 6b in two days. On the first day, participants completed the perceptual matching task as a practice, and on the second day, they finished the task again while the EEG signals were recorded. We only focus on the first day's data here. Experiment 3b was designed to test whether the effect found in Experiments 3a and 6b is robust if we separately present the self-referencing trials and other-referential trials. That is, participants finished two types of blocks: in the self-referencing blocks, they only made matching judgments to shape-label pairs that related to the self (i.e., shapes and labels of good-self, neutral-self, and bad-self), in the other-referential blocks, they only responded to shape-label pairs that related to the other (i.e., shapes and labels of good-other, neutral-other, and bad-other).
+Experiments 3a, 3b, and 6b were designed to test whether the prioritization of good character can be explained by the valence account or by the self-binding account. For this purpose, we included self-reference as another within-subject variable. For example, Experiment 3a extended Experiment 1a into a 2 (matching: match vs.mismatch) by 2 (reference: self vs. other) by 3 (moral character: good vs. neutral vs. bad) within-subject design. Thus, in Experiment 3a, there were six conditions (good-self, neutral-self, bad-self, good-other, neutral-other, and bad-other) and six shapes (triangle, square, circle, diamond, pentagon, and trapezoids). Experiment 6b was an EEG experiment based on Experiment 3a but presented the label and shape sequentially. Because of the relatively high working memory load (six label-shape pairs), participants finished Experiment 6b in two days. On the first day, participants completed the perceptual matching task as a practice, and on the second day, they finished the task again while the EEG signals were recorded. We only focus on the first day's data here. Experiment 3b was designed to test whether the effect found in Experiments 3a and 6b is robust if we separately present the self-referencing trials and other-referential trials. That is, participants finished two types of blocks: in the self-referencing blocks, they only made matching judgments to shape-label pairs that related to the self (i.e., shapes and labels of good-self, neutral-self, and bad-self), in the other-referential blocks, they only responded to shape-label pairs that related to the other (i.e., shapes and labels of good-other, neutral-other, and bad-other).
 
 Experiments 4a and 4b were designed to test whether the self and the good character bind spontaneously. In Experiment 4a, participants were instructed to learn the association between two shapes (circle and square) with two labels (self vs. other) in the learning stage. In the test stage, they were instructed only respond to the shape and label during the test stage. However, we presented the labels of different moral characters in the shapes and instructed participants to ignore these labels when making matching judgments. If the self and good character bind together spontaneously, then the mere presence of good character will facilitate the response to shapes associated with the self. In the Experiment 4b, we reversed the role of self and moral character in the task: Participants learned associations between three moral labels (good-person, neutral-person, and bad-person) and three shapes (circle, square, and triangle) and made matching judgments about the shape and label of moral character, while words related to identity, "self" or "other", were presented within the shapes. As in Experiment 4a, participants were told to ignore the words inside the shape during the perceptual matching task. In the same vein, if the self and good character bind together spontaneously, then the mere presence of the self will facilitate the response to shapes associated with good character. 
 
@@ -12,7 +12,7 @@ Experiments 4a and 4b were designed to test whether the self and the good charac
 
 We used E-prime 2.0 for presenting stimuli and collecting behavioral responses. Data were collected from two universities located in two different cities in China. Participants recruited from Tsinghua University, Beijing, finished the experiment individually in a dim-lighted chamber. Stimuli were presented on 22-inch CRT monitors and participants rested their chins on a brace to fix the distance between their eyes and the screen around 60 cm. The visual angle of geometric shapes was about $3.7^\circ × 3.7^\circ$, the fixation cross is of $0.8^\circ × 0.8^\circ$ visual angle at the center of the screen. The words were of $3.6^\circ$ × $1.6^\circ$ visual angle. The distance between the center of shapes or images of labels and the fixation cross was of $3.5^\circ$ visual angle. Participants from Wenzhou University, Wenzhou, finished the experiment in a group consisting of 3 ~ 12 participants in a dim-lighted testing room. They were instructed to complete the whole experiment independently. Also, they were told to start the experiment at the same time so that the distraction between participants was minimized. The stimuli were presented on 19-inch CRT monitors with the same set of parameters in E-prime 2.0 as in Tsinghua University, however, the visual angles could not be controlled because participants’ chins were not fixed.
 
-In most of these experiments, participants were also asked to fill out questionnaires after finishing the behavioral tasks. All the questionnaire data were open [see, dataset 4 in @Liu_2020_JOPD]. See Table 1 for a summary of information about all the experiments. 
+In most of these experiments, participants were also asked to fill out questionnaires following the behavioral tasks. All the questionnaire data were open [see, dataset 4 in @Liu_2020_JOPD]. See Table 1 for a summary of information about all the experiments. 
 
 ```{r 'Table_1_exp_info', ehco = FALSE, results = 'asis'}
 exp_table <- read.csv('Exp_info_all.csv') %>%
@@ -37,7 +37,7 @@ We used the `r` package `BRMs` [@Bürkner_2017], which used Stan [@Carpenter_201
 For questionnaire data, we only reported the subjective distance between different persons or moral characters in the supplementary results and did not analyze other questionnaire data in the present study, which were described in [@Liu_2020_JOPD].
 
 ### Response data
-We followed previous studies [@Hu_2020_GoodSelf; @Sui_2012_JEPHPP] and used the signal detection theory approach to analyze the response accuracy. More specifically, the match trials are treated as signals and non-match trials are noise. The sensitivity and criterion of signal detection theory are modeled through BHM [@Rouder_2005_BHM_SDT]. 
+We followed previous studies [@Hu_2020_goodme; @Sui_2012_JEPHPP] and used the signal detection theory approach to analyze the response accuracy. More specifically, the match trials are treated as signals and non-match trials are noise. The sensitivity and criterion of signal detection theory are modeled through BHM [@Rouder_2005_BHM_SDT]. 
 
 We used the Bernoulli distribution for the signal detection theory. The probability that the $j$th subject responded "match" ($y_{ij} = 1$) at the $i$th trial $p_{ij}$ is distributed as a Bernoulli distribution with parameter $p_{ij}$:
 
@@ -103,4 +103,4 @@ We tested whether moral characters are prioritized by examining the population-l
 We tested the modulation effect of the self-referencing process by examining the interaction between moral character and the self-referencing process for the three-level Bayesian hierarchical model of Experiments 3a, 3b, and 6b. More specifically, we tested two possible explanations for the prioritization of good character: the valence effect alone or an interaction between the valence effect and self-relevance. If the former is correct, then there will be no interaction between moral character and self-relevance, i.e., the prioritization effect exhibits a similar pattern for both self- and other-referential conditions. Otherwise, there will be an interaction between the two factors, i.e., the prioritization effect exhibits different patterns for self- and other-referencing conditions. To test the interaction, we calculated the posterior distribution of the difference of difference: $(good - neutral)_{self}$ vs. $(good - neutral)_{other}$. We then tested the difference of difference with SEXIT approach.
 
 #### Spontaneous binding between the self and good character
-For data from Experiments 4a and 4b, we further examined whether the self-referencing process is spontaneous (i.e., whether the good character is spontaneously bound with the self). For Experiment 4a, if there exists a spontaneous binding between self and good character, there should be an interaction between moral character and self-relevance. More specifically, we tested the posterior distributions of $good_{self} - neutral_{self}$ and $good_{other} - neutral_{other}$, as well as the difference between these differences with the SEXIT framework. For Experiment 4b, if there exists a spontaneous binding between self-relevance and good character, then, there will be a self-other difference for some moral character conditions but not for other moral character conditions. More specifically, we tested the posteriors of $good_{self} - good_{other}$, $neutral_{self} - neutral_{other}$, and $bad_{self} - bad_{other}$ as well as the difference between them with SEXIT framework. 
+For data from Experiments 4a and 4b, we further examined whether the self-referencing process is spontaneous (i.e., whether the good character is spontaneously bound with the self). For Experiment 4a, if there exists a spontaneous binding between self and good character, there should be an interaction between moral character and self-relevance. More specifically, we tested the posterior distributions of $good_{self} - neutral_{self}$ and $good_{other} - neutral_{other}$, as well as the difference between these differences with the SEXIT framework. For Experiment 4b, if there exists a spontaneous binding between self-relevance and good character, then, there will be a self-other difference for some moral character conditions but not for other moral character conditions. More specifically, we tested the posteriors of $good_{self} - good_{other}$, $neutral_{self} - neutral_{other}$, and $bad_{self} - bad_{other}$ as well as the difference between them with SEXIT framework.
